--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pandas = "^2.2.1"
 paramiko = "^3.4.0"
 scp = "^0.14.5"
 flower = "^2.0.1"
+onnxruntime = "^1.18.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
