--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-oidc-context": "^3.0.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.21.3",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
