fix: auto resize plots generated inside 0 height div
- ResponsivePlots rendered inside `lumisection` page Accordion gets
rendered with wrong initial height and width since accordion items body
is initially hidden. Adding `react-resize-detector` the plot container
geits automatically scaled when the accordion item is expanded.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-oidc-context": "^3.0.0",
     "react-plotly.js": "^2.6.0",
+    "react-resize-detector": "^11.0.1",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4"
   },
