--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ django-redis = "^5.4.0"
 python-keycloak = "^3.12.0"
 gunicorn = "^22.0.0"
 jwcrypto = "^1.5.6"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.group.etl.dependencies]
 celery = "^5.3.6"
