--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python-keycloak = "^3.12.0"
 gunicorn = "^22.0.0"
 jwcrypto = "^1.5.6"
 beautifulsoup4 = "^4.12.3"
+runregistry = "^1.3.1"
 
 [tool.poetry.group.etl.dependencies]
 celery = "^5.3.6"
