--- a/.gitignore
+++ b/.gitignore
@@ -332,8 +332,7 @@ yarn-error.log*
 *.benchmark-dat
 mocked_dbs*.json
 docker-compose.yaml
-DQMIO/
-DQMIO_samples/
-usercert.pem
-userkey.pem
-ML_models/
+etl/mocks/DQMIO/
+etl/mocks/DQMIO_samples/
+etl/mocks/DQMIO_for_DIALS_local_dev/
+etl/mocks/ML_models/
