refactor: replace docker.io nginx-unprivileged and upload it directly to harbor
- This is done to avoid DockerHub's rate limits when rolling out new
versions of the backend.

--- a/oc/prod/deployments/web/backend.yaml
+++ b/oc/prod/deployments/web/backend.yaml
@@ -58,7 +58,7 @@ spec:
               mountPath: /var/www/api/
               readOnly: true
           imagePullPolicy: Always
-          image: nginxinc/nginx-unprivileged
+          image: image-registry.openshift-image-registry.svc:5000/cms-dials-prod/nginx-unprivileged:latest
       volumes:
         - name: nginx-conf
           configMap:
