--- a/oc/prod/configmaps/backend-rproxy.yaml
+++ b/oc/prod/configmaps/backend-rproxy.yaml
@@ -41,6 +41,15 @@ data:
           }
 
           location @django {
+              gzip on;
+              gzip_disable "msie6";
+              gzip_vary on;
+              gzip_proxied any;
+              gzip_proxied any;
+              gzip_buffers 16 8k;
+              gzip_http_version 1.1;
+              gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
               proxy_connect_timeout 30;
               proxy_send_timeout 30;
               proxy_read_timeout 30;
