--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ psycopg2-binary = "^2.9.9"
 requests = "^2.32.0"
 
 [tool.poetry.group.backend.dependencies]
-django = "5.0.8"
+django = "^5.0.9"
 djangorestframework = "^3.15.2"
 django-filter = "^23.5"
 django-cors-headers = "^4.3.1"
@@ -41,12 +41,8 @@ onnxruntime = "^1.18.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
 poethepoet = "^0.24.4"
-psutil = "^5.9.8"
-matplotlib = "^3.8.3"
 ruff = "^0.3.2"
 pyyaml = "^6.0.1"
-uritemplate = "^4.1.1"
-inflection = "^0.5.1"
 
 [tool.poe.tasks]
 start-api = "./backend/scripts/start-dev.sh"
