--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
+    "keycloak-js": "^26.1.0",
     "oidc-client-ts": "^3.0.0",
     "plotly.js": "^2.28.0",
     "react": "^18.2.0",
@@ -24,7 +25,6 @@
     "react-bootstrap-table-next": "https://gitpkg.now.sh/BonnierNews/react-bootstrap-table2/packages/react-bootstrap-table2",
     "react-bootstrap-table2-paginator": "https://gitpkg.now.sh/BonnierNews/react-bootstrap-table2/packages/react-bootstrap-table2-paginator",
     "react-dom": "^18.2.0",
-    "react-oidc-context": "^3.0.0",
     "react-plotly.js": "^2.6.0",
     "react-resize-detector": "^11.0.1",
     "react-router-dom": "^6.21.3",
